--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,11 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#santorini {
+    background-color: darkgreen;
+}
+
+#mykonos {
+    background-color: darkblue;
+}
