style: modify color for Greece Islands to dark blue, Hong Kong to dark green

--- a/css/app.css
+++ b/css/app.css
@@ -59,10 +59,10 @@ h2 {
     background-color: #800000;
 }
 
-#santorini {
-    background-color: darkgreen;
+#greece {
+    background-color: darkblue;
 }
 
-#mykonos {
-    background-color: darkblue;
+#hk {
+    background-color: darkgreen;
 }
